--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,52 +1,30 @@
-name: Release
+name: release
 on:
   push:
     tags:
-      - 'v*.**'
-
-permissions:
-  contents: write
-
+      - v*.**
 jobs:
-  release:
-    name: Build
+  goreleaser:
     runs-on: ubuntu-22.04
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-
-      - uses: actions/checkout@v3
+      - name: Set up Go 1.21
+        uses: actions/setup-go@v1
         with:
-          fetch-depth: 0
+          go-version: 1.21
+        id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Get dependencies
+        run: go mod tidy
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
         with:
-          node-version: 16.x
-
-      - name: Create github releases
-        run: npx changelogithub
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
-      - name: Generate a changelog
-        uses: orhun/git-cliff-action@v2
-        with:
-          config: cliff.toml
-          args: --verbose
-        env:
-          OUTPUT: CHANGELOG.md
-
-      - name: Extract branch name
-        shell: bash
-        run: |
-          raw=$(git branch -r --contains ${{ github.ref }} | grep release)
-          echo "raw is $raw."
-          branch=${raw#*/}
-          echo "Branch is $branch."
-          echo "branch=$branch" >> $GITHUB_OUTPUT
-        id: extract_branch
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Update ChangeLog
-          file_pattern: 'CHANGELOG.md'
-          branch: ${{ steps.extract_branch.outputs.branch }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
